[metadata]
# replace with your username:
name = imageplot-shrish_s
version = 0.0.1
author = Shrish Shukla
author_email = shrish.shukla23@gmail.com
description = A small image package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShrishShukla/imageplot
project_urls =
    Bug Tracker = https://github.com/ShrishShukla/imageplot.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src